<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".locationreminders.savereminder.SaveReminderFragment">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reminder_title_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/reminder_title"
                    app:boxCornerRadiusTopStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reminderTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.reminderTitle}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reminder_description_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/reminder_desc"
                    app:boxCornerRadiusTopStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/reminder_title_layout"
                    android:layout_marginHorizontal="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reminderDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:lines="10"
                        android:text="@={viewModel.reminderDescription}" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/section_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/reminder_description_layout"
                    android:layout_marginHorizontal="16dp" />

                <LinearLayout
                    android:id="@+id/select_location_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/section_divider"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/location_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:contentDescription="@string/select_location"
                        android:src="@drawable/ic_location"
                        app:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/selectLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:ellipsize="end"
                        android:hint="@string/select_location"
                        android:maxLines="1"
                        android:text="@{viewModel.selectedPlaceOfInterestName}"
                        android:textColor="@android:color/black"
                        tools:text="@string/reminder_location" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/saveReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="@dimen/margin_normal"
            android:contentDescription="@string/save"
            android:fadeVisible="@{!viewModel.showLoading.booleanValue()}"
            android:text="@string/save_reminder"
            app:fabSize="normal"
            app:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            app:iconTint="@color/design_default_color_on_primary"
            app:icon="@drawable/ic_save" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fadeVisible="@{viewModel.showLoading.booleanValue()}"
            tools:elevation="100dp" />

    </FrameLayout>
</layout>